[gd_scene load_steps=31 format=2]

[ext_resource path="res://assests/Effects/toxic can.png" type="Texture" id=2]
[ext_resource path="res://sounds/Explosion.wav" type="AudioStream" id=3]
[ext_resource path="res://scenes/objects/chemical_barrel.gd" type="Script" id=4]

[sub_resource type="OccluderPolygon2D" id=1]
cull_mode = 1
polygon = PoolVector2Array( -109.36, -169.198, 109.305, -168.404, 109.672, 167.524, -108.928, 166.682 )

[sub_resource type="StreamTexture" id=2]
flags = 4
load_path = "res://.import/toxic can.png-8ff76e8934a3f7f28d49cf4302310e92.stex"

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 109.5, 168.5 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 1099, 1099 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1099, 0, 1099, 1099 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 2198, 0, 1099, 1099 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 3297, 0, 1099, 1099 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 4396, 0, 1099, 1099 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 5495, 0, 1099, 1099 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 6594, 0, 1099, 1099 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 7693, 0, 1099, 1099 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 8792, 0, 1099, 1099 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 9891, 0, 1099, 1099 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 10990, 0, 1099, 1099 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 1099, 1099, 1099 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1099, 1099, 1099, 1099 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 2198, 1099, 1099, 1099 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 3297, 1099, 1099, 1099 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 4396, 1099, 1099, 1099 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 5495, 1099, 1099, 1099 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 6594, 1099, 1099, 1099 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 7693, 1099, 1099, 1099 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 8792, 1099, 1099, 1099 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 9891, 1099, 1099, 1099 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 10990, 1099, 1099, 1099 )

[sub_resource type="SpriteFrames" id=26]
animations = [ {
"frames": [ null, SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ) ],
"loop": false,
"name": "explosion",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=27]
extents = Vector2( 116.101, 175.056 )

[node name="chemical_barrel" type="RigidBody2D" groups=[
"bodies",
]]
mass = 10.0
gravity_scale = 10.0
script = ExtResource( 4 )

[node name="blast" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 1 )

[node name="toxic_can" type="Sprite" parent="."]
texture = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="Explotion2" type="AnimatedSprite" parent="."]
z_index = 5
frames = SubResource( 26 )
animation = "explosion"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -0.471939 )
shape = SubResource( 27 )

[connection signal="animation_finished" from="Explotion2" to="." method="_on_Explotion2_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
